--- a/05 Implementation/AndroidProject/app/src/main/res/values/strings.xml
+++ b/05 Implementation/AndroidProject/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="nav_header_subtitle">zealand.dk</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-    <string name="x">X</string>
+    <string name="xRaw">X</string>
     <string name="vo">VO</string>
     <string name="ve">VE</string>
     <string name="domk">DOMK</string>
