Working on CSV export by Intend

--- a/05 Implementation/AndroidProject/app/src/main/res/values/strings.xml
+++ b/05 Implementation/AndroidProject/app/src/main/res/values/strings.xml
@@ -30,7 +30,10 @@
     <string name="indstillinger">Indstillinger</string>
 
     <string name="vist">Vist</string>
-    <string name="skjult">Skjult</string>
+    <string name="skjult">Skjult</string>1
+
+
+    <string name="share">Share</string>
 
 
 </resources>
